# dummy-lib

./: .clang-uml  CMakeLists.txt  LICENSE  README.md
include/: dummy.h
src/: dummy.cpp
